--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -51,6 +51,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: failed with initial frozen solve. Retrying with flexible solve.\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: failed with initial frozen solve. Retrying with flexible solve.\n",
+      "\n",
+      "PackagesNotFoundError: The following packages are not available from current channels:\n",
+      "\n",
+      "  - google-api-python-client\n",
+      "\n",
+      "Current channels:\n",
+      "\n",
+      "  - https://repo.anaconda.com/pkgs/main/linux-64\n",
+      "  - https://repo.anaconda.com/pkgs/main/noarch\n",
+      "  - https://repo.anaconda.com/pkgs/r/linux-64\n",
+      "  - https://repo.anaconda.com/pkgs/r/noarch\n",
+      "\n",
+      "To search for alternate channels that may provide the conda package you're\n",
+      "looking for, navigate to\n",
+      "\n",
+      "    https://anaconda.org\n",
+      "\n",
+      "and use the search bar at the top of the page.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda install google-api-python-client"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -174,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
