--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -2,17 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "from __future__ imports must occur at the beginning of the file (<ipython-input-1-53e2a1e93d6d>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-53e2a1e93d6d>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    from googleapiclient import errors\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m from __future__ imports must occur at the beginning of the file\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from YouTube import capstone"
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "import pickle\n",
+    "import os.path\n",
+    "from googleapiclient import errors\n",
+    "from googleapiclient.discovery import build\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from google.auth.transport.requests import Request"
    ]
   },
   {
@@ -196,6 +219,115 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If modifying these scopes, delete the file token.pickle.\n",
+    "SCOPES = ['https://www.googleapis.com/auth/script.projects']\n",
+    "\n",
+    "SAMPLE_CODE = '''\n",
+    "function helloWorld() {\n",
+    "  console.log(\"Hello, world!\");\n",
+    "}\n",
+    "'''.strip()\n",
+    "\n",
+    "SAMPLE_MANIFEST = '''\n",
+    "{\n",
+    "  \"timeZone\": \"America/New_York\",\n",
+    "  \"exceptionLogging\": \"CLOUD\"\n",
+    "}\n",
+    "'''.strip()\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"Calls the Apps Script API.\n",
+    "    \"\"\"\n",
+    "    creds = None\n",
+    "    # The file token.pickle stores the user's access and refresh tokens, and is\n",
+    "    # created automatically when the authorization flow completes for the first\n",
+    "    # time.\n",
+    "    if os.path.exists('token.pickle'):\n",
+    "        with open('token.pickle', 'rb') as token:\n",
+    "            creds = pickle.load(token)\n",
+    "    # If there are no (valid) credentials available, let the user log in.\n",
+    "    if not creds or not creds.valid:\n",
+    "        if creds and creds.expired and creds.refresh_token:\n",
+    "            creds.refresh(Request())\n",
+    "        else:\n",
+    "            flow = InstalledAppFlow.from_client_secrets_file(\n",
+    "                'credentials.json', SCOPES)\n",
+    "            creds = flow.run_local_server(port=0)\n",
+    "        # Save the credentials for the next run\n",
+    "        with open('token.pickle', 'wb') as token:\n",
+    "            pickle.dump(creds, token)\n",
+    "\n",
+    "    service = build('script', 'v1', credentials=creds)\n",
+    "\n",
+    "    # Call the Apps Script API\n",
+    "    try:\n",
+    "        # Create a new project\n",
+    "        request = {'title': 'My Script'}\n",
+    "        response = service.projects().create(body=request).execute()\n",
+    "\n",
+    "        # Upload two files to the project\n",
+    "        request = {\n",
+    "            'files': [{\n",
+    "                'name': 'hello',\n",
+    "                'type': 'SERVER_JS',\n",
+    "                'source': SAMPLE_CODE\n",
+    "            }, {\n",
+    "                'name': 'appsscript',\n",
+    "                'type': 'JSON',\n",
+    "                'source': SAMPLE_MANIFEST\n",
+    "            }]\n",
+    "        }\n",
+    "        response = service.projects().updateContent(\n",
+    "            body=request,\n",
+    "            scriptId=response['scriptId']).execute()\n",
+    "        print('https://script.google.com/d/' + response['scriptId'] + '/edit')\n",
+    "    except errors.HttpError as error:\n",
+    "        # The API encountered a problem.\n",
+    "        print(error.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "# [END apps_script_api_quickstart]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=150621263345-ps27aiur2h7j7ro9el25odc0dlfkca0o.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A32905%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fscript.projects&state=74D7Cce6th2aqC7cbfEnI0m1U7hhsI&access_type=offline\n",
+      "b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"Apps Script API has not been used in project 150621263345 before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/script.googleapis.com/overview?project=150621263345 then retry. If you enabled this API recently, wait a few minutes for the action to propagate to our systems and retry.\",\\n    \"status\": \"PERMISSION_DENIED\",\\n    \"details\": [\\n      {\\n        \"@type\": \"type.googleapis.com/google.rpc.Help\",\\n        \"links\": [\\n          {\\n            \"description\": \"Google developers console API activation\",\\n            \"url\": \"https://console.developers.google.com/apis/api/script.googleapis.com/overview?project=150621263345\"\\n          }\\n        ]\\n      }\\n    ]\\n  }\\n}\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -214,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
