--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -324,6 +324,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def api_request(page_token, country_code):\n",
+    "    # Builds the URL and requests the JSON from it\n",
+    "    request_url = f\"https://www.googleapis.com/youtube/v3/videos?part=id,statistics,snippet{page_token}chart=mostPopular&regionCode={country_code}&maxResults=100&key={api_key}\"\n",
+    "    print(\"request_url:\", request_url)\n",
+    "    return None\n",
+    "    request = requests.get(request_url)\n",
+    "    if request.status_code == 429:\n",
+    "        print(\"Temp-Banned due to excess requests, please wait and continue later\")\n",
+    "        sys.exit()\n",
+    "    return request.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
