added time to output filename

--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -342,6 +342,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.08.04.11.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "print (time.strftime('%y.%d.%m.%H.%M'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
