added secret file

--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -370,7 +370,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "# Sample Python code for youtube.activities.list\n",
+    "# See instructions for running these code samples locally:\n",
+    "# https://developers.google.com/explorer-help/guides/code_samples#python\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "import google_auth_oauthlib.flow\n",
+    "import googleapiclient.discovery\n",
+    "import googleapiclient.errors\n",
+    "\n",
+    "scopes = [\"https://www.googleapis.com/auth/youtube.readonly\"]\n",
+    "\n",
+    "def main():\n",
+    "    # Disable OAuthlib's HTTPS verification when running locally.\n",
+    "    # *DO NOT* leave this option enabled in production.\n",
+    "    os.environ[\"OAUTHLIB_INSECURE_TRANSPORT\"] = \"1\"\n",
+    "\n",
+    "    api_service_name = \"youtube\"\n",
+    "    api_version = \"v3\"\n",
+    "    client_secrets_file = \"YOUR_CLIENT_SECRET_FILE.json\"\n",
+    "\n",
+    "    # Get credentials and create an API client\n",
+    "    flow = google_auth_oauthlib.flow.InstalledAppFlow.from_client_secrets_file(\n",
+    "        client_secrets_file, scopes)\n",
+    "    credentials = flow.run_console()\n",
+    "    youtube = googleapiclient.discovery.build(\n",
+    "        api_service_name, api_version, credentials=credentials)\n",
+    "\n",
+    "    request = youtube.activities().list(\n",
+    "        \n",
+    "    )\n",
+    "    response = request.execute()\n",
+    "\n",
+    "    print(response)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
