updated duration calc

--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
+    "import pickle     #saves data in a python type in hard storage\n",
+    "from googleapiclient import errors  #I ended up not using the Google libs, but they exist\n",
+    "from googleapiclient.discovery import build\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from google.auth.transport.requests import Request\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -16,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "import pickle\n",
-    "import os.path\n",
-    "from googleapiclient import errors\n",
-    "from googleapiclient.discovery import build\n",
-    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
-    "from google.auth.transport.requests import Request"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import google_api_python_client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,15 +39,6 @@
     "        \n",
     "# with open('secret.txt') as f_sec:\n",
     "#         APP_SECRET = f_sec.read().rstrip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import google-auth-oauthlib google-auth-httplib2"
    ]
   },
   {
