added some charts

--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -248,6 +248,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 kind <class 'str'> \n",
+      " 1 etag <class 'str'> \n",
+      " 2 items <class 'list'> of <class 'dict'>\n",
+      "\t 0 kind <class 'str'> \n",
+      "\t 1 etag <class 'str'> \n",
+      "\t 2 id <class 'str'> \n",
+      "\t 3 snippet <class 'dict'> \n",
+      "\t\t 0 channelId <class 'str'> \n",
+      "\t\t 1 title <class 'str'> \n",
+      "\t\t 2 assignable <class 'bool'> \n",
+      " 0 kind <class 'str'> \n",
+      " 1 etag <class 'str'> \n",
+      " 2 items <class 'list'> of <class 'dict'>\n",
+      "\t 0 kind <class 'str'> \n",
+      "\t 1 etag <class 'str'> \n",
+      "\t 2 id <class 'str'> \n",
+      "\t 3 snippet <class 'dict'> \n",
+      "\t\t 0 channelId <class 'str'> \n",
+      "\t\t 1 title <class 'str'> \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exploring the structure of the response\n",
+    "# See https://developers.google.com/youtube/v3/docs/videoCategories/list\n",
+    "\n",
+    "drill_down(categories_response.json())\n",
+    "drill_down(guide_categories_response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -282,10 +321,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "drill_down( r_cat.json())\n",
-    "drill_down(r_gcat.json())\n",
     "\n",
     "#put the categories into a pandas df\n",
     "j = r_cat.json()\n",
