--- a/tyler.ipynb
+++ b/tyler.ipynb
@@ -170,7 +170,6 @@
     "    request_url = f\"https://www.googleapis.com/youtube/v3/videos?\\\n",
     "    part=id,statistics,snippet{page_token}chart=mostPopular&regionCode={country_code}&maxResults=100&key={api_key}\"\n",
     "    print(\"request_url:\", request_url)\n",
-    "    return None\n",
     "    request = requests.get(request_url)\n",
     "    if request.status_code == 429:\n",
     "        print(\"Temp-Banned due to excess requests, please wait and continue later\")\n",
@@ -671,7 +670,7 @@
     "\n",
     "def api_request(page_token, country_code):\n",
     "    # Builds the URL and requests the JSON from it\n",
-    "    request_url = f\"https://www.googleapis.com/youtube/v3/videos?part=id,statistics,snippet{page_token}chart=mostPopular&regionCode={country_code}&maxResults=50&key={api_key}\"\n",
+    "    request_url = f\"https://www.googleapis.com/youtube/v3/videos?part=id,statistics,snippet,contentDetails{page_token}chart=mostPopular&regionCode={country_code}&maxResults=50&key={api_key}\"\n",
     "    request = requests.get(request_url)\n",
     "    if request.status_code == 429:\n",
     "        print(\"Temp-Banned due to excess requests, please wait and continue later\")\n",
@@ -701,6 +700,7 @@
     "        # Snippet and statistics are sub-dicts of video, containing the most useful info\n",
     "        snippet = video['snippet']\n",
     "        statistics = video['statistics']\n",
+    "        contentDetails = video['contentDetails']\n",
     "\n",
     "        # This list contains all of the features in snippet that are 1 deep and require no special processing\n",
     "        features = [prepare_feature(snippet.get(feature, \"\")) for feature in snippet_features]\n",
@@ -711,6 +711,7 @@
     "        trending_date = time.strftime(\"%y.%d.%m\")\n",
     "        tags = get_tags(snippet.get(\"tags\", [\"[none]\"]))\n",
     "        view_count = statistics.get(\"viewCount\", 0)\n",
+    "        duration = contentDetails.get(\"duration\", 0)\n",
     "\n",
     "        # This may be unclear, essentially the way the API works is that if a video has comments or ratings disabled\n",
     "        # then it has no feature for it, thus if they don't exist in the statistics dict we know they are disabled\n",
@@ -804,250 +805,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#videos resource menu\n",
-    "#https://developers.google.com/youtube/v3/docs/videos\n",
-    "\n",
-    "videos_menu = {\n",
-    "  \"kind\": \"youtube#video\",\n",
-    "  \"etag\": etag,\n",
-    "  \"id\": string,\n",
-    "  \"snippet\": {\n",
-    "    \"publishedAt\": datetime,\n",
-    "    \"channelId\": string,\n",
-    "    \"title\": string,\n",
-    "    \"description\": string,\n",
-    "    \"thumbnails\": {\n",
-    "      (key): {\n",
-    "        \"url\": string,\n",
-    "        \"width\": unsigned integer,\n",
-    "        \"height\": unsigned integer\n",
-    "      }\n",
-    "    },\n",
-    "    \"channelTitle\": string,\n",
-    "    \"tags\": [\n",
-    "      string\n",
-    "    ],\n",
-    "    \"categoryId\": string,\n",
-    "    \"liveBroadcastContent\": string,\n",
-    "    \"defaultLanguage\": string,\n",
-    "    \"localized\": {\n",
-    "      \"title\": string,\n",
-    "      \"description\": string\n",
-    "    },\n",
-    "    \"defaultAudioLanguage\": string\n",
-    "  },\n",
-    "  \"contentDetails\": {\n",
-    "    \"duration\": string,\n",
-    "    \"dimension\": string,\n",
-    "    \"definition\": string,\n",
-    "    \"caption\": string,\n",
-    "    \"licensedContent\": boolean,\n",
-    "    \"regionRestriction\": {\n",
-    "      \"allowed\": [\n",
-    "        string\n",
-    "      ],\n",
-    "      \"blocked\": [\n",
-    "        string\n",
-    "      ]\n",
-    "    },\n",
-    "    \"contentRating\": {\n",
-    "      \"acbRating\": string,\n",
-    "      \"agcomRating\": string,\n",
-    "      \"anatelRating\": string,\n",
-    "      \"bbfcRating\": string,\n",
-    "      \"bfvcRating\": string,\n",
-    "      \"bmukkRating\": string,\n",
-    "      \"catvRating\": string,\n",
-    "      \"catvfrRating\": string,\n",
-    "      \"cbfcRating\": string,\n",
-    "      \"cccRating\": string,\n",
-    "      \"cceRating\": string,\n",
-    "      \"chfilmRating\": string,\n",
-    "      \"chvrsRating\": string,\n",
-    "      \"cicfRating\": string,\n",
-    "      \"cnaRating\": string,\n",
-    "      \"cncRating\": string,\n",
-    "      \"csaRating\": string,\n",
-    "      \"cscfRating\": string,\n",
-    "      \"czfilmRating\": string,\n",
-    "      \"djctqRating\": string,\n",
-    "      \"djctqRatingReasons\": [,\n",
-    "        string\n",
-    "      ],\n",
-    "      \"ecbmctRating\": string,\n",
-    "      \"eefilmRating\": string,\n",
-    "      \"egfilmRating\": string,\n",
-    "      \"eirinRating\": string,\n",
-    "      \"fcbmRating\": string,\n",
-    "      \"fcoRating\": string,\n",
-    "      \"fmocRating\": string,\n",
-    "      \"fpbRating\": string,\n",
-    "      \"fpbRatingReasons\": [,\n",
-    "        string\n",
-    "      ],\n",
-    "      \"fskRating\": string,\n",
-    "      \"grfilmRating\": string,\n",
-    "      \"icaaRating\": string,\n",
-    "      \"ifcoRating\": string,\n",
-    "      \"ilfilmRating\": string,\n",
-    "      \"incaaRating\": string,\n",
-    "      \"kfcbRating\": string,\n",
-    "      \"kijkwijzerRating\": string,\n",
-    "      \"kmrbRating\": string,\n",
-    "      \"lsfRating\": string,\n",
-    "      \"mccaaRating\": string,\n",
-    "      \"mccypRating\": string,\n",
-    "      \"mcstRating\": string,\n",
-    "      \"mdaRating\": string,\n",
-    "      \"medietilsynetRating\": string,\n",
-    "      \"mekuRating\": string,\n",
-    "      \"mibacRating\": string,\n",
-    "      \"mocRating\": string,\n",
-    "      \"moctwRating\": string,\n",
-    "      \"mpaaRating\": string,\n",
-    "      \"mpaatRating\": string,\n",
-    "      \"mtrcbRating\": string,\n",
-    "      \"nbcRating\": string,\n",
-    "      \"nbcplRating\": string,\n",
-    "      \"nfrcRating\": string,\n",
-    "      \"nfvcbRating\": string,\n",
-    "      \"nkclvRating\": string,\n",
-    "      \"oflcRating\": string,\n",
-    "      \"pefilmRating\": string,\n",
-    "      \"rcnofRating\": string,\n",
-    "      \"resorteviolenciaRating\": string,\n",
-    "      \"rtcRating\": string,\n",
-    "      \"rteRating\": string,\n",
-    "      \"russiaRating\": string,\n",
-    "      \"skfilmRating\": string,\n",
-    "      \"smaisRating\": string,\n",
-    "      \"smsaRating\": string,\n",
-    "      \"tvpgRating\": string,\n",
-    "      \"ytRating\": string\n",
-    "    },\n",
-    "    \"projection\": string,\n",
-    "    \"hasCustomThumbnail\": boolean\n",
-    "  },\n",
-    "  \"status\": {\n",
-    "    \"uploadStatus\": string,\n",
-    "    \"failureReason\": string,\n",
-    "    \"rejectionReason\": string,\n",
-    "    \"privacyStatus\": string,\n",
-    "    \"publishAt\": datetime,\n",
-    "    \"license\": string,\n",
-    "    \"embeddable\": boolean,\n",
-    "    \"publicStatsViewable\": boolean,\n",
-    "    \"madeForKids\": boolean,\n",
-    "    \"selfDeclaredMadeForKids\": boolean\n",
-    "  },\n",
-    "  \"statistics\": {\n",
-    "    \"viewCount\": unsigned long,\n",
-    "    \"likeCount\": unsigned long,\n",
-    "    \"dislikeCount\": unsigned long,\n",
-    "    \"favoriteCount\": unsigned long,\n",
-    "    \"commentCount\": unsigned long\n",
-    "  },\n",
-    "  \"player\": {\n",
-    "    \"embedHtml\": string,\n",
-    "    \"embedHeight\": long,\n",
-    "    \"embedWidth\": long\n",
-    "  },\n",
-    "  \"topicDetails\": {\n",
-    "    \"topicIds\": [\n",
-    "      string\n",
-    "    ],\n",
-    "    \"relevantTopicIds\": [\n",
-    "      string\n",
-    "    ],\n",
-    "    \"topicCategories\": [\n",
-    "      string\n",
-    "    ]\n",
-    "  },\n",
-    "  \"recordingDetails\": {\n",
-    "    \"recordingDate\": datetime\n",
-    "  },\n",
-    "  \"fileDetails\": {\n",
-    "    \"fileName\": string,\n",
-    "    \"fileSize\": unsigned long,\n",
-    "    \"fileType\": string,\n",
-    "    \"container\": string,\n",
-    "    \"videoStreams\": [\n",
-    "      {\n",
-    "        \"widthPixels\": unsigned integer,\n",
-    "        \"heightPixels\": unsigned integer,\n",
-    "        \"frameRateFps\": double,\n",
-    "        \"aspectRatio\": double,\n",
-    "        \"codec\": string,\n",
-    "        \"bitrateBps\": unsigned long,\n",
-    "        \"rotation\": string,\n",
-    "        \"vendor\": string\n",
-    "      }\n",
-    "    ],\n",
-    "    \"audioStreams\": [\n",
-    "      {\n",
-    "        \"channelCount\": unsigned integer,\n",
-    "        \"codec\": string,\n",
-    "        \"bitrateBps\": unsigned long,\n",
-    "        \"vendor\": string\n",
-    "      }\n",
-    "    ],\n",
-    "    \"durationMs\": unsigned long,\n",
-    "    \"bitrateBps\": unsigned long,\n",
-    "    \"creationTime\": string\n",
-    "  },\n",
-    "  \"processingDetails\": {\n",
-    "    \"processingStatus\": string,\n",
-    "    \"processingProgress\": {\n",
-    "      \"partsTotal\": unsigned long,\n",
-    "      \"partsProcessed\": unsigned long,\n",
-    "      \"timeLeftMs\": unsigned long\n",
-    "    },\n",
-    "    \"processingFailureReason\": string,\n",
-    "    \"fileDetailsAvailability\": string,\n",
-    "    \"processingIssuesAvailability\": string,\n",
-    "    \"tagSuggestionsAvailability\": string,\n",
-    "    \"editorSuggestionsAvailability\": string,\n",
-    "    \"thumbnailsAvailability\": string\n",
-    "  },\n",
-    "  \"suggestions\": {\n",
-    "    \"processingErrors\": [\n",
-    "      string\n",
-    "    ],\n",
-    "    \"processingWarnings\": [\n",
-    "      string\n",
-    "    ],\n",
-    "    \"processingHints\": [\n",
-    "      string\n",
-    "    ],\n",
-    "    \"tagSuggestions\": [\n",
-    "      {\n",
-    "        \"tag\": string,\n",
-    "        \"categoryRestricts\": [\n",
-    "          string\n",
-    "        ]\n",
-    "      }\n",
-    "    ],\n",
-    "    \"editorSuggestions\": [\n",
-    "      string\n",
-    "    ]\n",
-    "  },\n",
-    "  \"liveStreamingDetails\": {\n",
-    "    \"actualStartTime\": datetime,\n",
-    "    \"actualEndTime\": datetime,\n",
-    "    \"scheduledStartTime\": datetime,\n",
-    "    \"scheduledEndTime\": datetime,\n",
-    "    \"concurrentViewers\": unsigned long,\n",
-    "    \"activeLiveChatId\": string\n",
-    "  },\n",
-    "  \"localizations\": {\n",
-    "    (key): {\n",
-    "      \"title\": string,\n",
-    "      \"description\": string\n",
-    "    }\n",
-    "  }\n",
-    "}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
